[gd_scene load_steps=4 format=3 uid="uid://f83um7r4mw67"]

[ext_resource type="Script" uid="uid://jc06herhel73" path="res://main.gd" id="1_iuonh"]
[ext_resource type="PackedScene" uid="uid://bxn0ktvlcc62h" path="res://scenes/player/player.tscn" id="2_k2fmo"]
[ext_resource type="PackedScene" uid="uid://bbwi0fyunxp0w" path="res://scenes/ui/ui.tscn" id="3_k2fmo"]

[node name="Main" type="Node2D"]
script = ExtResource("1_iuonh")

[node name="Projectiles" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_k2fmo")]

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.5, 0.5)

[node name="EnemiesCreation" type="Timer" parent="."]

[node name="Ui" parent="." instance=ExtResource("3_k2fmo")]

[connection signal="enemy_created" from="." to="." method="_on_enemy_created"]
[connection signal="shoot" from="Player" to="." method="_on_player_shoot"]
[connection signal="timeout" from="EnemiesCreation" to="." method="_on_timer_timeout"]
